--- a/solution.ipynb
+++ b/solution.ipynb
@@ -40,7 +40,9 @@
       "outputs": [],
       "source": [
         "def rotateString(s, goal):\n",
-        "  # Write a code here\n",
+        "  for i in range(len(s)):\n",
+        "    shift_list.append(s[i+1:]+s[i])\n",
+        "    print(shift_list)\n",
         "  pass"
       ]
     },
