--- a/solution.ipynb
+++ b/solution.ipynb
@@ -1,21 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "TV3Socqg8BVl"
+      },
       "source": [
         "## Task \n",
         "- Complete **rotateString** function following the description below\n",
@@ -26,10 +15,7 @@
         "A shift on **s** consists of moving the leftmost character of **s** to the rightmost position.\n",
         "\n",
         "- For example, if **s = \"abcde\"**, then it will be **\"bcdea\"** after one shift."
-      ],
-      "metadata": {
-        "id": "TV3Socqg8BVl"
-      }
+      ]
     },
     {
       "cell_type": "code",
@@ -40,14 +26,23 @@
       "outputs": [],
       "source": [
         "def rotateString(s, goal):\n",
-        "  for i in range(len(s)):\n",
-        "    shift_list.append(s[i+1:]+s[i])\n",
-        "    print(shift_list)\n",
-        "  pass"
+        "    shift_list = []\n",
+        "    for i in range(len(s)):\n",
+        "        shift_list.append(s[i+1:]+s[:i+1])\n",
+        "    if goal in shift_list:\n",
+        "        return True\n",
+        "    else:\n",
+        "        return False\n",
+        "    pass"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "iGtv8pRU59yu"
+      },
+      "outputs": [],
       "source": [
         "'''\n",
         "Testcase 1. \n",
@@ -55,15 +50,15 @@
         "Output: True\n",
         "'''\n",
         "rotateString(\"abcde\", \"cdeab\")"
-      ],
-      "metadata": {
-        "id": "iGtv8pRU59yu"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "c_igv9cg6Jb0"
+      },
+      "outputs": [],
       "source": [
         "'''\n",
         "Testcase 2. \n",
@@ -71,15 +66,15 @@
         "Output: False\n",
         "'''\n",
         "rotateString(\"abcde\", \"abced\")"
-      ],
-      "metadata": {
-        "id": "c_igv9cg6Jb0"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "gzATcpEZ6P67"
+      },
+      "outputs": [],
       "source": [
         "'''\n",
         "Testcase 3. \n",
@@ -87,12 +82,21 @@
         "Output: True\n",
         "'''\n",
         "rotateString(\"abcde\", \"abcde\")"
-      ],
-      "metadata": {
-        "id": "gzATcpEZ6P67"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
